--- a/DWDImport/src/MainWindow.ui
+++ b/DWDImport/src/MainWindow.ui
@@ -25,7 +25,11 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QtExt::ValidatingLineEdit" name="lineEditYear"/>
+       <widget class="QtExt::ValidatingLineEdit" name="lineEditYear">
+        <property name="text">
+         <string>2019</string>
+        </property>
+       </widget>
       </item>
       <item row="1" column="0" colspan="2">
        <widget class="QGroupBox" name="groupBox">
