Added ftp searching in directory

--- a/DWDImport/src/DWDMainWindow.ui
+++ b/DWDImport/src/DWDMainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>DWD Importer</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -181,7 +181,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="pushButtonDownload">
         <property name="text">
          <string>Download Data</string>
         </property>
