--- a/DWDImport/src/DWDMainWindow.ui
+++ b/DWDImport/src/DWDMainWindow.ui
@@ -93,19 +93,6 @@
          <string>Time</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_2">
-         <item row="0" column="0">
-          <widget class="QLabel" name="label">
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>Year:</string>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="1" colspan="2">
           <widget class="QtExt::ValidatingLineEdit" name="lineEditYear">
            <property name="maximumSize">
@@ -116,6 +103,19 @@
            </property>
            <property name="text">
             <string>2019</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Year:</string>
            </property>
           </widget>
          </item>
@@ -133,12 +133,18 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0" colspan="3">
-          <widget class="QPushButton" name="pushButtonUpdate">
-           <property name="text">
-            <string>Update Table</string>
+         <item row="2" column="0">
+          <spacer name="verticalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
            </property>
-          </widget>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </widget>
