--- a/DWDImport/src/DWDMap.ui
+++ b/DWDImport/src/DWDMap.ui
@@ -14,6 +14,9 @@
    <string>Pick a location</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0">
+   <property name="sizeConstraint">
+    <enum>QLayout::SetFixedSize</enum>
+   </property>
    <item>
     <widget class="QGraphicsView" name="graphicsViewMap">
      <property name="viewportUpdateMode">
