--- a/DWDImport/src/DWDMainWindow.ui
+++ b/DWDImport/src/DWDMainWindow.ui
@@ -33,13 +33,13 @@
        <enum>Qt::Horizontal</enum>
       </property>
       <widget class="QTableView" name="tableView"/>
-      <widget class="QWidget" name="">
-       <layout class="QVBoxLayout" name="verticalLayout_2">
+      <widget class="QWidget" name="layoutWidget">
+       <layout class="QVBoxLayout" name="verticalLayoutParameters">
         <property name="sizeConstraint">
          <enum>QLayout::SetDefaultConstraint</enum>
         </property>
         <item>
-         <widget class="QGroupBox" name="groupBox">
+         <widget class="QGroupBox" name="groupBoxLocation">
           <property name="maximumSize">
            <size>
             <width>16777215</width>
@@ -119,7 +119,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QGroupBox" name="groupBox_2">
+         <widget class="QGroupBox" name="groupBoxDistance">
           <property name="maximumSize">
            <size>
             <width>16777215</width>
@@ -252,6 +252,16 @@
            </size>
           </property>
          </spacer>
+        </item>
+        <item>
+         <widget class="QwtPlot" name="rainPlot" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QwtPlot" name="tempPlot" native="true">
